Fix layout issue, update index

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,6 +8,6 @@ header {
     width: 80%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: 1.5fr 1.5fr;
     grid-gap: 1rem;
   }
